--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.4",
+    "node-sass-middleware": "^1.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
